--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <p>Hello Dunia!, Saya sedang belajar Git</p>
+    <p>Hello Dunia!, Saya sedang belajar Git seru</p>
 </body>
 
 </html>
